fix: move height to body measurements
